<resources>
    <string name="app_name">AndroidTutorials</string>
    <string name="web_view">WEB VIEW</string>
    <string name="load_url">LOAD URL</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="save_profile">Save Profile</string>
    <string name="take_picture">Take Picture</string>
    <string name="show_profile_page">CREATE PROFILE</string>
    <string name="firstname">First Name</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="status">Status</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_fragment">ADD FRAGMENT</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>

    <!--Activity Titles-->
    <string name="services">Services</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="transition_photo">transition_photo</string>

    <string-array name="home_page_modules">
        <item>Activities</item>
        <item>Widgets</item>
        <item>Services</item>
        <item>Threads</item>
        <item>Broadcast Receivers</item>
        <item>Notifications</item>
        <item>Material Widgets</item>
        <item>Content Providers</item>
        <item>Shared Preferences</item>
        <item>SqlLite Demo</item>
        <item>Permissions Demo</item>
        <item>Locations</item>
        <item>Maps</item>
        <item>Animations</item>
    </string-array>
    <string name="title_activity_maps_demo">Map</string>

</resources>
