<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgview_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btn_take_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="takePicture"
            android:text="@string/take_picture" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_layout"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="200dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_names">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectLocation"
            android:text="@string/select_location" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="saveProfile"
        android:text="@string/save_profile" />

</RelativeLayout>