<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tutorials.andorid.app.HomeActivity">

    <TextView
        android:id="@+id/txt_view_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/status"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnWebViewExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showWebViewExample"
        android:text="@string/web_view" />

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showCamera"
        android:text="@string/open_camera" />

    <Button
        android:id="@+id/btnShowProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showProfilePage"
        android:text="@string/show_profile_page" />

    <fragment
        android:id="@+id/simple_fragment1"
        android:name="com.tutorials.andorid.app.SimpleFragment"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        tools:layout="@layout/simple_fragment" />

    <fragment
        android:id="@+id/simple_fragment2"
        android:name="com.tutorials.andorid.app.SimpleFragment"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        tools:layout="@layout/simple_fragment" />

</LinearLayout>
